--- a/package.json
+++ b/package.json
@@ -1,42 +1,29 @@
 {
-  "name": "@key-connect/api",
-  "version": "1.0.0",
-  "description": "NodeJS client for @key-connect/api",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/key-connect/sdkjs.git"
-  },
-  "main": "dist/api.js",
-  "types": "dist/api.d.ts",
-  "scripts": {
-    "clean": "rm -Rf node_modules/ *.js",
-    "build": "tsc",
-    "test": "npm run build && node dist/client.js"
-  },
-  "author": "Manthan Dave <manthanhd@outlook.com>",
-  "license": "MIT",
-  "dependencies": {
-    "bluebird": "^3.5.0",
-    "request": "^2.81.0",
-    "@types/bluebird": "*",
-    "@types/request": "*",
-    "rewire": "^3.0.2"
-  },
-  "devDependencies": {
-    "typescript": "^2.4.2",
-    "@types/node": "8.10.34"
-  },
-  "keywords": [
-    "blockchain",
-    "ethereum",
-    "xrp",
-    "eth",
-    "sdk",
-    "api",
-    "client"
-  ],
-  "bugs": {
-    "url": "https://github.com/key-connect/sdkjs/issues"
-  },
-  "homepage": "https://github.com/key-connect/sdkjs"
+    "name": "@key-connect/api",
+    "version": "1.1.0",
+    "description": "NodeJS client for @key-connect/api",
+    "repository": "git@github.com:key-connect/sdkjs.git",
+    "main": "dist/api.js",
+    "types": "dist/api.d.ts",
+    "scripts": {
+        "clean": "rm -Rf node_modules/ *.js",
+        "build": "tsc",
+        "test": "npm run build && node dist/client.js"
+    },
+    "author": "Manthan Dave",
+    "license": "MIT",
+    "dependencies": {
+        "bluebird": "^3.5.0",
+        "request": "^2.81.0",
+        "@types/bluebird": "*",
+        "@types/request": "*",
+        "rewire": "^3.0.2"
+    },
+    "devDependencies": {
+        "typescript": "^2.4.2",
+        "@types/node": "8.10.34"
+    },
+    "publishConfig": {
+        "registry": "key-connect/sdkjs"
+    }
 }
